--- a/project/.gitlab-ci.yml
+++ b/project/.gitlab-ci.yml
@@ -32,7 +32,7 @@ eslint:
     - apk add --update npm
     - npm ci --cache .npm --prefer-offline
     - npm run lint
-    - npm run lint-html
+    - npm run lint-md
 
 after_script:
   - docker-compose down
